# isaac-sim-duckiebot-ros2

./: README.md  supervisor_ath.usd
src/duckietown-sim-server/duckiebot_description/urdf/: duckiebot.urdf  duckiebot.xacro
src/duckietown-sim-server/final_project/: CMakeLists.txt  package.xml
src/duckietown-sim-server/final_project/scripts/: led_service.py  red_object_follower.py
